--- a/M07/ex02/Makefile
+++ b/M07/ex02/Makefile
@@ -1,14 +1,23 @@
-# **************************************************************************** #
-#                                                                              #
-#                                                         :::      ::::::::    #
-#    Makefile                                           :+:      :+:    :+:    #
-#                                                     +:+ +:+         +:+      #
-#    By: oezzaou <oezzaou@student.1337.ma>          +#+  +:+       +#+         #
-#                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2023/11/14 19:48:44 by oezzaou           #+#    #+#              #
-#    Updated: 2023/12/05 11:32:10 by oezzaou          ###   ########.fr        #
-#                                                                              #
-# **************************************************************************** #
+#                ################                                                         
+#              ####################                                                       
+#            ########################                                                     
+#           #############+########### #                                                   
+#           ######-..        .+########          < Makefile >                             
+#           ####-..            ..+####                                                    
+#           ###-...             .-####                                                    
+#           ###...              ..+##      Student: oezzaou <oezzaou@student.1337.ma>     
+#            #-.++###.      -###+..##                                                     
+#            #....  ...   .-.  ....##         Created: 2023/12/07 14:19:58 by oezzaou     
+#         --.#.-#+## -..  -+ ##-#-.-...       Updated: 2023/12/07 14:19:58 by oezzaou     
+#          ---....... ..  ........... -                                                   
+#          -+#..     ..   .       .+-.                                                    
+#           .--.     .     .     ..+.                                                     
+#             -..    .+--.-.     ...                                                      
+#             +.... .-+#.#+.    ..-                                                       
+#              +...#####-++###-..-                                                        
+#              #---..----+--.---+##                                                       
+#            ###-+--.... ....--+#####                                                     
+#      ##########--#-.......-#-###########        Made By Oussama Ezzaou (OEZZAOU) :)     
 
 #====< Variables >==============================================================
 NAME		:= array
