--- a/M08/ex01/Makefile
+++ b/M08/ex01/Makefile
@@ -1,26 +1,26 @@
-#                ################                                                         
-#              ####################                                                       
-#            ########################                                                     
-#           #############+########### #                                                   
-#           ######-..        .+########          < Makefile >                             
-#           ####-..            ..+####                                                    
-#           ###-...             .-####                                                    
-#           ###...              ..+##      Student: oezzaou <oezzaou@student.1337.ma>     
-#            #-.++###.      -###+..##                                                     
-#            #....  ...   .-.  ....##         Created: 2023/12/07 16:57:58 by oussama     
-#         --.#.-#+## -..  -+ ##-#-.-...       Updated: 2023/12/07 18:38:21 by oussama     
-#          ---....... ..  ........... -                                                   
-#          -+#..     ..   .       .+-.                                                    
-#           .--.     .     .     ..+.                                                     
-#             -..    .+--.-.     ...                                                      
-#             +.... .-+#.#+.    ..-                                                       
-#              +...#####-++###-..-                                                        
-#              #---..----+--.---+##                                                       
-#            ###-+--.... ....--+#####                                                     
-#      ##########--#-.......-#-###########        Made By Oussama Ezzaou (OEZZAOU) :)     
+#             ################                                                  
+#           ####################                                                
+#         ########################                                              
+#        #############+########### #                                            
+#        ######-..        .+########        < Makefile >                        
+#        ####-..            ..+####                                             
+#        ###-...             .-####                                             
+#        ###...              ..+##    Student: oezzaou <oezzaou@student.1337.ma>
+#         #-.++###.      -###+..##                                              
+#         #....  ...   .-.  ....##       Created: 2023/12/08 18:19:29 by oezzaou
+#      --.#.-#+## -..  -+ ##-#-.-...     Updated: 2023/12/08 18:19:29 by oezzaou
+#       ---....... ..  ........... -                                            
+#       -+#..     ..   .       .+-.                                             
+#        .--.     .     .     ..+.                                              
+#          -..    .+--.-.     ...                                               
+#          +.... .-+#.#+.    ..-                                                
+#           +...#####-++###-..-                                                 
+#           #---..----+--.---+##                                                
+#         ###-+--.... ....--+#####                                              
+#   ##########--#-.......-#-###########      Made By Oussama Ezzaou <OEZZAOU> :)
 
 #====< Variables >==============================================================
-NAME		:= easyfind
+NAME		:= span
 CC			:= c++
 CPPFLAGS	:= -std=c++98 -Wall -Wextra -Werror #-Wuninitialized
 OBJ_DIR		:= objs
