--- a/M07/ex00/Makefile
+++ b/M07/ex00/Makefile
@@ -1,23 +1,23 @@
-#                ################                                                         
-#              ####################                                                       
-#            ########################                                                     
-#           #############+########### #                                                   
-#           ######-..        .+########          < Makefile >                             
-#           ####-..            ..+####                                                    
-#           ###-...             .-####                                                    
-#           ###...              ..+##      Student: oezzaou <oezzaou@student.1337.ma>     
-#            #-.++###.      -###+..##                                                     
-#            #....  ...   .-.  ....##         Created: 2023/12/07 14:16:51 by oezzaou     
-#         --.#.-#+## -..  -+ ##-#-.-...       Updated: 2023/12/07 14:16:51 by oezzaou     
-#          ---....... ..  ........... -                                                   
-#          -+#..     ..   .       .+-.                                                    
-#           .--.     .     .     ..+.                                                     
-#             -..    .+--.-.     ...                                                      
-#             +.... .-+#.#+.    ..-                                                       
-#              +...#####-++###-..-                                                        
-#              #---..----+--.---+##                                                       
-#            ###-+--.... ....--+#####                                                     
-#      ##########--#-.......-#-###########        Made By Oussama Ezzaou (OEZZAOU) :)     
+#             ################                                                  
+#           ####################                                                
+#         ########################                                              
+#        #############+########### #                                            
+#        ######-..        .+########        < Makefile >                        
+#        ####-..            ..+####                                             
+#        ###-...             .-####                                             
+#        ###...              ..+##    Student: oezzaou <oezzaou@student.1337.ma>
+#         #-.++###.      -###+..##                                              
+#         #....  ...   .-.  ....##       Created: 2023/12/08 17:28:14 by oezzaou
+#      --.#.-#+## -..  -+ ##-#-.-...     Updated: 2023/12/08 17:28:14 by oezzaou
+#       ---....... ..  ........... -                                            
+#       -+#..     ..   .       .+-.                                             
+#        .--.     .     .     ..+.                                              
+#          -..    .+--.-.     ...                                               
+#          +.... .-+#.#+.    ..-                                                
+#           +...#####-++###-..-                                                 
+#           #---..----+--.---+##                                                
+#         ###-+--.... ....--+#####                                              
+#   ##########--#-.......-#-###########      Made By Oussama Ezzaou <OEZZAOU> :)
 
 #====< Variables >==============================================================
 NAME		:= funTemplate
