--- a/M06/ex02/Makefile
+++ b/M06/ex02/Makefile
@@ -1,14 +1,23 @@
-# **************************************************************************** #
-#                                                                              #
-#                                                         :::      ::::::::    #
-#    Makefile                                           :+:      :+:    :+:    #
-#                                                     +:+ +:+         +:+      #
-#    By: oezzaou <oezzaou@student.1337.ma>          +#+  +:+       +#+         #
-#                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2023/11/14 19:48:44 by oezzaou           #+#    #+#              #
-#    Updated: 2023/11/26 09:27:39 by oezzaou          ###   ########.fr        #
-#                                                                              #
-# **************************************************************************** #
+#             ################                                                  
+#           ####################                                                
+#         ########################                                              
+#        #############+########### #                                            
+#        ######-..        .+########        < Makefile >                        
+#        ####-..            ..+####                                             
+#        ###-...             .-####                                             
+#        ###...              ..+##    Student: oezzaou <oezzaou@student.1337.ma>
+#         #-.++###.      -###+..##                                              
+#         #....  ...   .-.  ....##       Created: 2023/12/08 17:26:19 by oezzaou
+#      --.#.-#+## -..  -+ ##-#-.-...     Updated: 2023/12/08 17:26:19 by oezzaou
+#       ---....... ..  ........... -                                            
+#       -+#..     ..   .       .+-.                                             
+#        .--.     .     .     ..+.                                              
+#          -..    .+--.-.     ...                                               
+#          +.... .-+#.#+.    ..-                                                
+#           +...#####-++###-..-                                                 
+#           #---..----+--.---+##                                                
+#         ###-+--.... ....--+#####                                              
+#   ##########--#-.......-#-###########      Made By Oussama Ezzaou <OEZZAOU> :)
 
 #====< Variables >==============================================================
 NAME		:= program
