--- a/M08/ex02/Makefile
+++ b/M08/ex02/Makefile
@@ -8,7 +8,7 @@
 #        ###...              ..+##    Student: oezzaou <oezzaou@student.1337.ma>
 #         #-.++###.      -###+..##                                              
 #         #....  ...   .-.  ....##       Created: 2023/12/12 10:19:10 by oezzaou
-#      --.#.-#+## -..  -+ ##-#-.-...     Updated: 2023/12/12 10:19:10 by oezzaou
+#      --.#.-#+## -..  -+ ##-#-.-...     Updated: 2023/12/13 16:50:37 by oussama
 #       ---....... ..  ........... -                                            
 #       -+#..     ..   .       .+-.                                             
 #        .--.     .     .     ..+.                                              
