--- a/M05/ex00/Makefile
+++ b/M05/ex00/Makefile
@@ -1,19 +1,28 @@
-# **************************************************************************** #
-#                                                                              #
-#                                                         :::      ::::::::    #
-#    Makefile                                           :+:      :+:    :+:    #
-#                                                     +:+ +:+         +:+      #
-#    By: oezzaou <oezzaou@student.1337.ma>          +#+  +:+       +#+         #
-#                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2023/11/14 19:48:44 by oezzaou           #+#    #+#              #
-#    Updated: 2023/11/22 21:19:28 by oezzaou          ###   ########.fr        #
-#                                                                              #
-# **************************************************************************** #
+#             ################                                                  
+#           ####################                                                
+#         ########################                                              
+#        #############+########### #                                            
+#        ######-..        .+########        < Makefile >                        
+#        ####-..            ..+####                                             
+#        ###-...             .-####                                             
+#        ###...              ..+##    Student: oezzaou <oezzaou@student.1337.ma>
+#         #-.++###.      -###+..##                                              
+#         #....  ...   .-.  ....##       Created: 2023/12/21 17:40:09 by oussama
+#      --.#.-#+## -..  -+ ##-#-.-...     Updated: 2023/12/21 17:44:26 by oussama
+#       ---....... ..  ........... -                                            
+#       -+#..     ..   .       .+-.                                             
+#        .--.     .     .     ..+.                                              
+#          -..    .+--.-.     ...                                               
+#          +.... .-+#.#+.    ..-                                                
+#           +...#####-++###-..-                                                 
+#           #---..----+--.---+##                                                
+#         ###-+--.... ....--+#####                                              
+#   ##########--#-.......-#-###########      Made By Oussama Ezzaou <OEZZAOU> :)
 
 #====< Variables >==============================================================
-NAME		:= program
+NAME		:= bureaucrat
 CC			:= c++
-CPPFLAGS	:= -std=c++98 -Wall -Wextra -Werror
+CPPFLAGS	:= -std=c++98 -Wall -Wextra -Werror #-Wuninitialized
 OBJ_DIR		:= objs
 SRC			:= $(wildcard *.cpp)
 OBJ			:= $(addprefix $(OBJ_DIR)/, $(addsuffix .o, $(basename $(SRC))))
@@ -61,6 +70,6 @@ re: fclean all
 run:
 	@./$(NAME)
 
-.SUFFIXES: .o .cpp
+.SUFFIXES: .o .cpp .tpp
 .PHONY: all clean fclean re run
 #===============================================================================
