cpp: clean M00=ex0{0..2} source code

--- a/M00/ex02/Makefile
+++ b/M00/ex02/Makefile
@@ -6,45 +6,87 @@
 #    By: oezzaou <oezzaou@student.1337.ma>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/08/05 12:57:51 by oezzaou           #+#    #+#              #
-#    Updated: 2023/08/29 15:20:42 by oezzaou          ###   ########.fr        #
+#    Updated: 2025/02/24 15:49:38 by oezzaou          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
-################################################################################
-#                               VARIABLES:                                     #
-################################################################################
-NAME		:= account
-CPPFLAGS	:= -Wall -Wextra -Werror -std=c++98
-CC			:= c++
-OBJS_DIR	:= objs
-SRCS		:= $(wildcard *.cpp)
-OBJS		:= $(addprefix $(OBJS_DIR)/, $(addsuffix .o, $(basename $(SRCS))))
-RM			:= rm -rf
+#====<[ CC compiler: ]>=========================================================
+CC						:= c++
+CPPFLAGS			:= -Wall -Wextra -Werror -std=c++98
+RM						:= rm -rf
 
-################################################################################
-#                                RULES:                                        #
-################################################################################
-all: $(NAME)
+#====<[ Colors: ]>==============================================================
+GREEN					= \033[1;32m
+RED						= \033[1;31m
+BLUE					= \033[34m
+CYAN					= \033[1;36m
+GRAY					= \033[0;90m
+PURPLE				= \033[0;35m
+YELLOW				= \033[0;93m
+BLACK  				= \033[20m
+MAGENTA 			= \033[35m
+WHITE  				= \033[37m
+PINK					= \033[0;38;5;199m
+ORANGE 				= \033[38;5;214m
+LIGHT_BLACK  	= \033[90m
+LIGHT_RED    	= \033[91m
+LIGHT_GREEN  	= \033[92m
+LIGHT_YELLOW 	= \033[93m
+LIGHT_BLUE   	= \033[94m
+LIGHT_MAGENTA = \033[95m
+LIGHT_CYAN   	= \033[96m
+LIGHT_WHITE  	= \033[97m
+LIGHT_BLUE		= \033[38;5;45m
+RESET					= \033[1;0m
 
-$(NAME): $(OBJS)
+#===<[ Sources: ]>==============================================================
+PROJECT				:= ex02
+NAME					:= account
+OBJ_DIR				:= obj
+SRC						:= $(wildcard *.cpp)
+OBJ						:= $(addprefix $(OBJ_DIR)/, $(addsuffix .o, $(basename $(SRC))))
+
+#====<[ Rules: ]>===============================================================
+all: signature $(NAME)
+
+$(NAME): $(OBJ)
 	@$(CC) $(CPPFLAGS) $^ -o $@
+	@echo "${GREEN}[OK] ${CYAN}$(NAME) ✔️${RESET}"
 
-$(OBJS_DIR)/%.o: %.cpp | $(OBJS_DIR)
+$(OBJ_DIR)/%.o: %.cpp | $(OBJ_DIR)
 	@$(CC) $(CPPFLAGS) -c $< -o $@
-	@printf "Compling... %-10s >>>> %s.\n" "$<" "$@"
+	@printf "$(GREEN)[OK]${RESET} ${PINK}Compiling${RESET} %-26s| $@\n" "$<"
+
+signature:
+	@printf "${GRAY}%19s${RESET}\n"	"𓆩♕𓆪"
+	@printf "${GRAY}%s${RESET}\n"		"𓄂 oussama ezzaou𓆃  "
 
 run:
-	./$(NAME)
+	@./$(NAME)
 
-$(OBJS_DIR):
+$(OBJ_DIR):
 	@mkdir -p $@
 
 clean:
-	@${RM} $(OBJS_DIR)
+	@if [ -d $(OBJ_DIR) ]; then\
+		${RM} $(OBJ_DIR);\
+		printf "${GREEN}[OK]${RESET} ${ORANGE}Cleaning  %-26s${RESET}| ./%s\n"\
+					 "... " "$(PROJECT)/$(OBJ_DIR) ✔️";\
+	else\
+		printf "${RED}[KO]${RESET} ${BLUE}Not Found %-26s${RESET}| ./%s\n"\
+					 "..." "$(PROJECT)/$(OBJ_DIR) ✖️";\
+	fi
 
 fclean: clean
-	@${RM} $(NAME)
+	@if [ -f $(NAME) ]; then\
+		${RM} $(NAME);\
+		printf "${GREEN}[OK]${RESET} ${ORANGE}Cleaning  %-26s${RESET}| ./%s\n"\
+					 "... " "$(PROJECT)/$(NAME) ✔️";\
+	else\
+		printf "${RED}[KO]${RESET} ${BLUE}Not Found %-26s${RESET}| ./%s\n"\
+					 "..." "$(PROJECT)/$(NAME) ✖️";\
+	fi
 
 re: fclean all
 
-.PHONY: all run clean fclean re
-################################# (END) ########################################
+.PHONY: all run clean fclean re signature
+#===============================================================================
