--- a/M09/ex02/Makefile
+++ b/M09/ex02/Makefile
@@ -5,7 +5,7 @@
 #  ⢀⠔⠉⠀⠊⠿⠿⣿⠂⠠⠢⣤⠤⣤⣼⣿⣶⣶⣤⣝⣻⣷⣦⣍⡻⣿⣿⣿⣿⡀                                              
 #  ⢾⣾⣆⣤⣤⣄⡀⠀⠀⠀⠀⠀⠀⠀⠉⢻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇                                              
 #  ⠀⠈⢋⢹⠋⠉⠙⢦⠀⠀⠀⠀⠀⠀⢀⣼⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇       Created: 2024/04/05 02:34:12 by oezzaou
-#  ⠀⠀⠀⠑⠀⠀⠀⠈⡇⠀⠀⠀⠀⣠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠇       Updated: 2025/02/27 16:26:28 by oezzaou
+#  ⠀⠀⠀⠑⠀⠀⠀⠈⡇⠀⠀⠀⠀⣠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠇       Updated: 2025/03/02 09:59:54 by oezzaou
 #  ⠀⠀⠀⠀⠀⠀⠀⠀⡇⠀⠀⢀⣾⣿⣿⠿⠟⠛⠋⠛⢿⣿⣿⠻⣿⣿⣿⣿⡿⠀                                              
 #  ⠀⠀⠀⠀⠀⠀⠀⢀⠇⠀⢠⣿⣟⣭⣤⣶⣦⣄⡀⠀⠀⠈⠻⠀⠘⣿⣿⣿⠇⠀                                              
 #  ⠀⠀⠀⠀⠀⠱⠤⠊⠀⢀⣿⡿⣿⣿⣿⣿⣿⣿⣿⠀⠀⠀⠀⠀⠀⠘⣿⠏⠀⠀                             𓆩♕𓆪      
@@ -13,18 +13,18 @@
 #  ⠀⠀⠀⠀⠀⠘⠄⣀⡀⠸⠓⠀⠀⠀⠠⠟⠋⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                                              
 
 #====<[ CC compiler: ]>=========================================================
-CC					:= c++
-CPPFLAGS		:= -Wall -Wextra -Werror -std=c++98
-RM					:= rm -rf
+CC					  := c++
+CPPFLAGS		  := -Wall -Wextra -Werror -std=c++98
+RM					  := rm -rf
 
 #====< Sources >================================================================
-PROJECT			:= M09/ex02
-NAME				:= PmergeMe
+PROJECT			  := M09/ex02
+NAME				  := PmergeMe
 
-OBJ_DIR			:= obj
-SRC_DIR			:= src
-PARSER_LIB	:= parserLib
-INCLUDE			:= -Iinclude -I$(PARSER_LIB)/include
+OBJ_DIR			  := obj
+SRC_DIR			  := src
+PARSER_LIB	  := libprs
+INCLUDE			  := -Iinclude -I$(PARSER_LIB)/include
 
 SRC					:= $(wildcard *.cpp)\
 							 $(wildcard */*.cpp)\
